tests/javacresults/fail_unclosed_comment.txt
Intermediate.java:1: error: class, interface, or enum expected
Fatal error: exception Scanner.ParsingError("unterminated comment")
^
1 error
